# atfprog-tools

./: .gitignore  .pre-commit-config.yaml  AdditionalTools.md  LICENSE.md  README.md  Releasing.md  atf_clean  atf_compile_v  install.sh  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: python-app.yml  python-build.yml
src/: atfu.py
src/atfu/: check.py  command.py  device_id.py  erase.py  output.py  program.py  programmer.py  verify.py
src/atfu/converter/: device.py  fusecli.py  fuseconv.py  jed2svf.py  jesd3.py  svf.py  svf2xsvf.py  svfeventhandler.py
src/atfu/little_board/: jtag_programmer.py
src/atfu/standard_vectors/: __init__.py  bc1502.xsvf  bc1502v.xsvf  bc1508v.xsvf  e1502v.xsvf  e1508.xsvf  e1508v.xsvf
src/parser/: Jesd3c.g4  Jesd3c.interp  Jesd3c.tokens  Jesd3cLexer.g4  Jesd3cLexer.interp  Jesd3cLexer.py  Jesd3cLexer.tokens  Jesd3cListener.py  Jesd3cParser.g4  Jesd3cParser.interp  Jesd3cParser.py  Jesd3cParser.tokens  Jesd3cParserListener.py
src/parser/.antlr/: Jesd3cLexer.interp  Jesd3cLexer.java  Jesd3cLexer.tokens
standard_vectors/: bc1504.xsvf  blankcheck.xsvf  e1502.xsvf  e1504.xsvf  readues.xsvf
test/: check_test.py  device_test.py  erase_test.py  standard_vectors_test.py
test/atfu/test_cases/jed/: bug3.jed  bug4.jed
test/parser/: jed_parser_fields_test.py  jed_parser_test.py
test_cpld/: lock_jtag.svf  lock_jtag.xsvf  toggle.edif  toggle.fit  toggle.io  toggle.jed  toggle.pin  toggle.svf  toggle.tt3  toggle.v  toggle.xsvf
uploader/: Uploader.py  xsvf
util/: fuseconv.py  svf2xsvf.py
utils/: JTAGTAP.py  XSVFAssembler.py  XSVFDecoder.py  XSVFDisassembler.py  XSVFParser.py  xsvf
